# studysync

./: .coverage  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .runner_system_id  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  app.py  auth.py  cliff.toml  config.py  database.py  mypy.ini  plan.md  pyproject.toml  requirements.txt  studysync.db  tasks.md  tools.py
.specify/: study-planner
.specify/memory/: constitution.md
.specify/templates/: architecture-decision-record.md  bug-report.md  change-request.md  feature-spec.md  plan-template.md  spec-template.md  tasks-template.md
.streamlit/: secrets.toml
1_ translations/: en.py  hi.py  te.py
1_locales/: en.json  hi.json  te.json
ai/: cloud_ai.py  local_ai.py
pages/: 1_Chat.py  1_Dashboard.py  2_Assignments.py  3_Attendance.py  4_GPA_Calculator.py
specs/study-planner/: plan.md  spec.md  tasks.md
studysync/: agent.py
studysync/.adk/: session.db
translations/: __init__.py  en.py  hi.py  te.py
utils/: i18n.py  session.py  translator.py
