[project]
name = "studysync"
version = "0.1.0"
description = "AI-powered study assistant"
requires-python = ">=3.11"
dependencies = [
    "streamlit",
    "plotly",
    "pandas",
    "numpy",
    "requests",
    "bcrypt",
    "passlib",
    "python-dotenv",
    "babel",
    "ollama",
    "groq",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "vulture>=2.16",
]